--- a/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTOptionsPanel.properties
+++ b/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTOptionsPanel.properties
@@ -1,18 +1,18 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-Form.border.title=RFTOptions
+Form.border.title=Options
 jLabel1.text=Binary
 jLabel2.text=BlockSize
-jLabel3.text=TCPBufferSize
+jLabel3.text=TCP Buffer Size
 jLabel4.text=Bytes
 jLabel5.text=Bytes
 jLabel6.text=Notpt
-jLabel7.text=ParallelStream
+jLabel7.text=Parallel TCP Streams
 jLabel8.text=DCAU
-jLabel9.text=Concurrency of the request
-jLabel10.text=Source SubjectName
-jLabel11.text=Destination SubjectName
+jLabel9.text=Concurrency
+jLabel10.text=Source Subject
+jLabel11.text=Destination Subject
 jLabel12.text=All or None
 jLabel13.text=Max Attempts
 binary.text=
