--- a/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTTransferParamPanel.properties
+++ b/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTTransferParamPanel.properties
@@ -1,10 +1,10 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-Form.border.title=RFT Transfer Parameter
-jLabel1.text=Server Host
+Form.border.title=Reliable File Transfer Service (RFT) Parameters
+jLabel1.text=Service Host
 serverHostField.text=
-jLabel2.text=Server Port
+jLabel2.text=Service Port
 serverPortField.text=
 jLabel3.text=From
 fromField.text=
@@ -12,3 +12,5 @@ jLabel4.text=To
 toField.text=
 jLabel5.text=AuthType
 jLabel6.text=AuthzType
+concurrencyLabel.text=Concurrency
+concurrencyField.text=
