override the default 1.4 java version requirement
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2090 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/transfer-gui/build.xml
+++ b/cog/modules/transfer-gui/build.xml
@@ -11,6 +11,7 @@
 	<property name="main.buildfile"	value="${cog.dir}/mbuild.xml"/>
 	<property name="dist.dir" 		value="${cog.dir}/modules/${module.name}/dist/${module.name}-${version}"/>
 	<property name="build.dir" 		value="${cog.dir}/modules/${module.name}/build"/>
+	<property name="force.java.version"   value="1.5"/>
 
     <!-- ================================================ -->
     <!-- Help                                             -->
