--- a/src/cog/modules/transfer-gui/project.properties
+++ b/src/cog/modules/transfer-gui/project.properties
@@ -8,5 +8,6 @@ module.name 	= transfer-gui
 long.name 	= File Transfer Graphical Interface
 version		= 0.1
 project		= Java CoG Kit
-lib.deps	= -
+debug 		= true
+lib.deps	= GlobusPortal*.jar, bcprov-jdk*.jar, cog-ogce*.jar, gridant*.jar, ant-contrib*.jar, appframework*.jar, axis*.jar, beansbinding*.jar, commons-cli*.jar, concurrent*.jar, globus*.jar, swing-layout*.jar, swing-worker*.jar
 
