git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2104 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTOptionsPanel.properties
+++ b/cog/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTOptionsPanel.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-Form.border.title=Options
+Form.border.title=Optimization Parameter
 jLabel1.text=Binary
 jLabel2.text=BlockSize
 jLabel3.text=TCP Buffer Size
