--- a/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTOptionsPanel.properties
+++ b/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTOptionsPanel.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-Form.border.title=Options
+Form.border.title=Optimization Parameter
 jLabel1.text=Binary
 jLabel2.text=BlockSize
 jLabel3.text=TCP Buffer Size
