--- a/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/GridFTPGUIApp.properties
+++ b/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/GridFTPGUIApp.properties
@@ -1,11 +1,11 @@
 # Application global resources
 
-Application.name = GridFTP and RFT GUI
-Application.title = GridFTP and RFT GUI
+Application.name = GridFTP GUI
+Application.title = GridFTP GUI
 Application.version = 1.0
 Application.vendor = Globus Toolkit
 Application.homepage = http://www.globus.org
-Application.description = A simple GUI interface for GridFTP and RFT
+Application.description = A simple GUI interface for GridFTP
 Application.vendorId = Globus
 Application.id = Globus
 Application.lookAndFeel = default
