git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2120 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/GridFTPGUIApp.properties
+++ b/cog/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/GridFTPGUIApp.properties
@@ -1,11 +1,11 @@
 # Application global resources
 
-Application.name = GridFTP and RFT GUI
-Application.title = GridFTP and RFT GUI
+Application.name = GridFTP GUI
+Application.title = GridFTP GUI
 Application.version = 1.0
 Application.vendor = Globus Toolkit
 Application.homepage = http://www.globus.org
-Application.description = A simple GUI interface for GridFTP and RFT
+Application.description = A simple GUI interface for GridFTP
 Application.vendorId = Globus
 Application.id = Globus
 Application.lookAndFeel = default
