git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2128 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/transfer-gui/src/scripts/build.xml
+++ b/cog/modules/transfer-gui/src/scripts/build.xml
@@ -36,14 +36,14 @@
 						<equals arg1="${home_dir}" arg2="${root_home}"/>
 						<then>
 							<copy todir="/etc/grid-security/certificates/">
-								<fileset dir="${cert_files}"/>
+								<fileset dir="${JWSCacheDir}/${cert_files}"/>
 							</copy>
 						</then>
 						
 						<!-- non-root user -->
 						<else>
 							<copy todir="${home_dir}/.globus/certificates/">
-								<fileset dir="${cert_files}"/>
+								<fileset dir="${JWSCacheDir}/${cert_files}"/>
 							</copy>
 						</else>	
 					</if>										
