removed annoying warning when using gt4
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2201 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -13,6 +13,8 @@ log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSSZZZZZ} %-
 
 log4j.logger.swift=DEBUG
 
+log4j.logger.org.apache.axis.utils=ERROR
+
 log4j.logger.org.globus.swift.trace=INFO
 
 log4j.logger.org.griphyn.vdl.karajan.Loader=DEBUG
