option to make distribution without command grid commands such as grid-proxy-init, to facilitate installation inside a VDT install
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2207 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -92,6 +92,7 @@
 			<fileset dir="${dist.dir}/bin" 
 				includes="globus2jks*, grid-info-search*, cogrun*, globus-gass-server-shutdown*"/>
 		</delete>
+		<antcall target="remove-supporting" />
 		<copy todir="${dist.dir}/etc" 
 			file="${cog.dir}/modules/${module.name}/etc/karajan.properties" 
 			overwrite="true"/>
@@ -275,6 +276,13 @@ updateOptions "file:///dev/urandom" "java.security.egd"
 	
 	<target name="redist" depends="distclean, dist">
 	</target>
+
+       <target name="remove-supporting" if="no-supporting">
+ 		<delete>
+			<fileset dir="${dist.dir}/bin" 
+				includes="cog*, globus*, grid*"/>
+		</delete>
+        </target>
 
 </project>
 
