--- a/src/cog/modules/provider-coaster/resources/log4j.properties
+++ b/src/cog/modules/provider-coaster/resources/log4j.properties
@@ -1,19 +1,25 @@
 # Set root category priority to WARN and its only appender to CONSOLE.
-log4j.rootCategory=WARN, CONSOLE
+log4j.rootCategory=WARN, FILE
 
 # A1 is set to be a ConsoleAppender.
 #log4j.appender.DEBUG=org.apache.log4j.ConsoleAppender
 
+log4j.appender.FILE=org.apache.log4j.FileAppender
+log4j.appender.FILE.File=${user.home}/.globus/coasters/coasters.log
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSSZZZZZ} %-5p %c{1} %m%n
+
+
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+#log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+#log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 #log4j.appender.CONSOLE.Threshold=WARN
-log4j.appender.CONSOLE.layout.ConversionPattern=[%C{1}] %-5p %t %x - %m%n
+#log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %x - %m%n
 #log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%C{1}] %x - %m%n
 
 
 log4j.logger.org.globus.cog.abstraction=WARN
 log4j.logger.org.apache.axis.utils.JavaUtils=ERROR
 log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.JobSubmissionTaskHandler=INFO
-log4j.logger.org.globus.cog.karajan.workflow.service=DEBUG
+log4j.logger.org.globus.cog.karajan.workflow.service=INFO
 log4j.logger.org.globus.cog.abstraction.coaster=INFO
