Chunked userguide for easier online use
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2230 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,6 +6,9 @@ phps: userguide.php tutorial.php tutorial-live.php quickstartguide.php reallyqui
 
 pdfs: userguide.pdf tutorial.pdf tutorial-live.pdf quickstartguide.pdf reallyquickstartguide.pdf languagespec.pdf languagespec-0.6.pdf log-processing.pdf
 
+chunked-userguide: userguide.xml
+	./build-chunked-userguide.sh
+
 %.php: %.xml
 	xsltproc --nonet formatting/swiftsh_html.xsl $<
 	sed -e "s/index.html#/#/g" index.html >$@
