updated provider props
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2207 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-coaster/resources/cog-provider.properties
+++ b/cog/modules/provider-coaster/resources/cog-provider.properties
@@ -2,5 +2,5 @@ provider=coaster
 sandbox=false
 executionTaskHandler=org.globus.cog.abstraction.impl.execution.coaster.TaskHandlerImpl
 securityContext=org.globus.cog.abstraction.impl.common.task.SecurityContextImpl
-
-
+fileResource=org.globus.cog.abstraction.impl.file.coaster.FileResourceImpl
+fileOperationTaskHandler=org.globus.cog.abstraction.impl.file.coaster.TaskHandlerImpl
