--- a/modules/provider-coaster/resources/cog-provider.properties
+++ b/modules/provider-coaster/resources/cog-provider.properties
@@ -2,5 +2,5 @@ provider=coaster
 sandbox=false
 executionTaskHandler=org.globus.cog.abstraction.impl.execution.coaster.TaskHandlerImpl
 securityContext=org.globus.cog.abstraction.impl.common.task.SecurityContextImpl
-
-
+fileResource=org.globus.cog.abstraction.impl.file.coaster.FileResourceImpl
+fileOperationTaskHandler=org.globus.cog.abstraction.impl.file.coaster.TaskHandlerImpl
