makefile target to make all htmls
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2370 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,6 +4,8 @@ all: phps pdfs
 
 phps: userguide.php tutorial.php tutorial-live.php quickstartguide.php reallyquickstartguide.php languagespec.php languagespec-0.6.php log-processing.php plot-tour.php
 
+htmls: userguide.html tutorial.html tutorial-live.html quickstartguide.html reallyquickstartguide.html languagespec.html languagespec-0.6.html log-processing.html plot-tour.html
+
 pdfs: userguide.pdf tutorial.pdf tutorial-live.pdf quickstartguide.pdf reallyquickstartguide.pdf languagespec.pdf languagespec-0.6.pdf log-processing.pdf
 
 chunked-userguide: userguide.xml
