change module name to swift - build from source now needs to be done with the Swift SVN checked out in a directory called "swift", not "vdsk" as previously
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2433 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/project.properties
+++ b/project.properties
@@ -1,4 +1,4 @@
-module.name = vdsk
+module.name = swift
 debug = true
 long.name = Swift
 # Non-dev version numbers should not be committed to the trunk of
