put only necessary classes in bootstrap jar
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2292 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-coaster/build.xml
+++ b/cog/modules/provider-coaster/build.xml
@@ -147,15 +147,15 @@
 	<target name="fixeol">
 		<ant antfile="${main.buildfile}" target="fixeol"/>
 	</target>
-	
+		
 	<target name="bootstrap.jar" depends="package.list">
 		<echo message="[${module.name}]: BOOTSTRAP JAR"/>
     	<mkdir dir="${build.dir}/etc.tmp"/>
 	    <concat destfile="${build.dir}/etc.tmp/MANIFEST.MF">
        		<filelist dir="etc" files="MANIFEST.MF.head,MANIFEST.MF.tail"/>
 	    </concat>
-	    <jar jarfile="${dist.dir}/lib/coaster-bootstrap.jar" manifest="${build.dir}/etc.tmp/MANIFEST.MF" index="true">
-    		<fileset dir="${build.dir}" includes="**/*.*" excludes="*.tmp, *.tmp/**, *.tmp/**/*.*"/>
+	    <jar jarfile="${dist.dir}/lib/coaster-bootstrap.jar" manifest="${build.dir}/etc.tmp/MANIFEST.MF" index="false">
+    		<fileset dir="${build.dir}" includes="**/bootstrap/*.*" excludes="*.tmp, *.tmp/**, *.tmp/**/*.*"/>
 	    </jar>
 	</target>
 	
@@ -172,7 +172,6 @@
 		<copy file="${build.dir}/coaster-bootstrap.list" tofile="${cog.dir}/modules/${module.name}/lib/coaster-bootstrap.list"/>
 		<copy file="${build.dir}/coaster-bootstrap.list" tofile="${cog.dir}/modules/${module.name}/resources/coaster-bootstrap.list"/>
 	</target>
-
 </project>
 
 
