chmod swift-osg-ress-site-catalog to executable during build
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2562 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -134,6 +134,7 @@ updateOptions "file:///dev/urandom" "java.security.egd"
 			<replacevalue>set COG_OPTS=-DCOG_INSTALL_PATH=%SWIFT_HOME% -Dswift.home=%SWIFT_HOME% -Dvds.home=%SWIFT_HOME% </replacevalue>
 		</replace>
 		<chmod perm="+x" file="${dist.dir}/bin/swift"/>
+		<chmod perm="+x" file="${dist.dir}/bin/swift-osg-ress-site-catalog"/>
 	</target>
 
 	<target name="antlr">
