Recompilation will happen if a .kml file was compiled with a different version of Swift to the version being invoked. This is in addition to the existing behaviour where a .swift file will be recompiled if it is newer than the corresponding .kml file.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2583 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -273,6 +273,7 @@ updateOptions "file:///dev/urandom" "java.security.egd"
 	<target name="generateVersion">
 		<echo file="libexec/version.txt">Swift ${version} </echo>
 		<exec os="Linux, Mac OS X" executable="libexec/svn-revision" append="true" output="libexec/version.txt"/>
+		<exec os="Linux, Mac OS X" executable="libexec/generate-buildid" append="false" output="libexec/buildid.txt"/>
 	</target>
 	
 	<target name="redist" depends="distclean, dist">
