make doc building depend on stylesheets
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2617 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -11,11 +11,11 @@ pdfs: userguide.pdf tutorial.pdf tutorial-live.pdf quickstartguide.pdf reallyqui
 chunked-userguide: userguide.xml
 	./build-chunked-userguide.sh
 
-%.php: %.xml
+%.php: %.xml formatting/swiftsh_html.xsl
 	xsltproc --nonet formatting/swiftsh_html.xsl $<
 	sed -e "s/index.html#/#/g" index.html >$@
 
-%.pdf: %.xml
+%.pdf: %.xml formatting/vdl2_fo.xsl
 	fop/fop.sh -xsl formatting/vdl2_fo.xsl -xml $< -pdf $@
 
 %.html: %.php
