256M default max heap size (bug 109)
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2647 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -108,6 +108,10 @@
 			<replacevalue>LOCALCLASSPATH=$SWIFT_HOME/etc$CPDELIM$SWIFT_HOME/libexec</replacevalue>
 		</replace>
 		<replace file="${dist.dir}/bin/swift">
+			<replacetoken>HEAPMAX=</replacetoken>
+			<replacevalue>HEAPMAX=256M</replacevalue>
+		</replace>
+		<replace file="${dist.dir}/bin/swift">
 			<replacetoken>updateOptions "$SWIFT_HOME" "SWIFT_HOME"
 </replacetoken>
 			<replacevalue>updateOptions "$SWIFT_HOME" "COG_INSTALL_PATH"
