limit number of concurrent iterations in foreach
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2665 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -302,3 +302,13 @@ replication.limit=3
 # valid values: absolute, relative
 # wrapper.invocation.mode=absolute
 
+#
+# Limits the number of concurrent iterations that each foreach statement
+# can have at one time. This conserves memory for swift programs that 
+# have large numbers of iterations (which would otherwise all be executed
+# in parallel).
+#
+# Default: 1024
+#
+
+foreach.max.threads=1024
