--- a/modules/provider-localscheduler/project.properties
+++ b/modules/provider-localscheduler/project.properties
@@ -1,6 +1,6 @@
 module.name 	= provider-localscheduler
-long.name 		= Local providers for PBS/Torque and Cobalt
-version			= 0.3
+long.name 		= Local providers for PBS/Torque, Cobalt, and Condor
+version			= 0.4
 project			= Java CoG Kit
 lib.deps		= -
 debug			= true
