--- a/modules/provider-localscheduler/resources/cog-provider.properties
+++ b/modules/provider-localscheduler/resources/cog-provider.properties
@@ -11,3 +11,10 @@ executionTaskHandler=org.globus.cog.abstraction.impl.scheduler.cobalt.execution.
 securityContext=org.globus.cog.abstraction.impl.common.task.SecurityContextImpl
 
 alias=cobaltlocal:cobalt
+
+provider=condor
+sandbox=false
+executionTaskHandler=org.globus.cog.abstraction.impl.scheduler.condor.execution.TaskHandlerImpl
+securityContext=org.globus.cog.abstraction.impl.common.task.SecurityContextImpl
+
+alias=condorlocal:condor
