refactored and added condor provider
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2327 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/project.properties
+++ b/cog/modules/provider-localscheduler/project.properties
@@ -1,6 +1,6 @@
 module.name 	= provider-localscheduler
-long.name 		= Local providers for PBS/Torque and Cobalt
-version			= 0.3
+long.name 		= Local providers for PBS/Torque, Cobalt, and Condor
+version			= 0.4
 project			= Java CoG Kit
 lib.deps		= -
 debug			= true
