commandline interface to generate everylog-vs-versions.data - it can be generated using swift-plot-log, passing in the root directory to a log repository instead of an individual log file name
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2686 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/libexec/log-processing/makefile
+++ b/libexec/log-processing/makefile
@@ -152,3 +152,6 @@ jobid-karajanid-bindings: $(LOG)
 
 karatasks.JOB_SUBMISSION.annotated-execute2.transitions: karatasks.JOB_SUBMISSION.transitions execute2.event
 	annotate-karatasks-with-execute2-id < karatasks.JOB_SUBMISSION.transitions > karatasks.JOB_SUBMISSION.annotated-execute2.transitions
+
+everylog-vs-versions.data:
+	create-everylog-vs-versions-data $(LOG)
