explicitly set permissions on log-processing executables
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2708 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -80,6 +80,119 @@
 		</copy>
 		<chmod perm="+x" file="${dist.dir}/bin/VDL2Karajan"/>
 		<chmod perm="+x" file="${dist.dir}/bin/vdlc"/>
+		<chmod perm="+x" file="${dist.dir}/bin/swift-plot-log"/>
+		<chmod perm="+x" file="${dist.dir}/bin/swift-log-to-cedps"/>
+
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/active-state-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/add-runid-as-prefix"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/affine-transform"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/all-kickstarts-to-event"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/all-logs-active-jobsubmissions-count-graph"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/annotate-karatasks-with-execute2-id"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/autospace-data"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/cli-finished"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/cli-version"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/cluster-report"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/cluster-stats"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/colour-execute2"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/colour-execute2-by-falkon"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/colour-karatasks"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/coloured-event-plot"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/combine-execute-start-last-times"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/combine-karajan-tasks-and-load-average"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/combine-start-last-times"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/combine-start-last-times-to-event"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/compute-t-inf"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/create-everylog-vs-versions-data"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/duration-of-workflow"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/error-summary"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/event-duration-stats"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/events-in-progress"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/events-in-progress-first-loop.pl"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/events-in-progress-second-loop.pl"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/events-in-progress-third-loop.pl"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/everylog-durations-of-workflows"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/everylog-to-event"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/everylog-vs-versions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/execstages-plot"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/execute2-status-from-log"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/execute2-summary-from-log"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/execution-summaries"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-activity-for-subthreads-of"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-activity-for-task"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-activity-for-thread"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-completed-time-for-run-id"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-end-time"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-execute-start-times"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-failed-time-for-run-id"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-jobid-karajanid-bindings"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-last-time-for-execute"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-start-time"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/extract-start-times"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/falkon-to-event"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/generate-karatasks-event"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/get-jobid-for-karajanid"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/get-replicationid-for-execute2id"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/get-site-for-run-id"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/get-thread-for-run-id"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/info-and-karajan-actives"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/info-to-md5"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/info-to-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/info-to-zeroed-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/iso-to-secs"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/karatasks-only"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/kickstarts-to-event"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/kickstarts-to-plot"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/last-times"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/last-transition-line"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/list-known-tasks"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/list-known-threads"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-createdirset-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-dostagein-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-dostageout-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-execute-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-execute2-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-initshareddir-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-karatasks-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/logs-for-all"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/lookup-colour"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/max-duration"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/normalise-event-start-time"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/normalise-event-start-time-to-any"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/number-events"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/number-sites-list"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/overview-reports.sh"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/per-site-execute2-durations"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/plot-duration-histogram"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/plot-everylogs"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/queue-state-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/retrycounts"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/sec-to-utc"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/sec-to-utc-day"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/simple-event-plot"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/sort-preserve"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/split-start-times-shifted"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/start-last-times-and-kickstart"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/sum-tt1.pl"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/swap-and-sort"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/swap-and-sort-and-swap"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/swift-standard-log-to-transition"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/table-jobs-sites"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/task-status-to-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/tasks-in-cluster"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/temporal-join"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/tie-url-filenames"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/times-for-all-tasks"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/total-event-plot"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/trail"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/trail-freex"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/transitions-to-cedps"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/transitions-to-event"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/tscore.sh"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/weights.sh"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/whole-workflow-event"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/whole-workflow-time"/>
+
 		<!--<delete file="${dist.dir}/lib/jaxrpc.jar" quiet="true"/>-->
 		<delete includeEmptyDirs="true">
 			<fileset dir="${dist.dir}/bin/examples"/>
