--- a/build.xml
+++ b/build.xml
@@ -221,8 +221,10 @@
 			<replacevalue>LOCALCLASSPATH=$SWIFT_HOME/etc$CPDELIM$SWIFT_HOME/libexec</replacevalue>
 		</replace>
 		<replace file="${dist.dir}/bin/swift">
-			<replacetoken>HEAPMAX=</replacetoken>
-			<replacevalue>HEAPMAX=256M</replacevalue>
+			<replacetoken>HEAPMAX=
+</replacetoken>
+			<replacevalue>HEAPMAX=256M
+</replacevalue>
 		</replace>
 		<replace file="${dist.dir}/bin/swift">
 			<replacetoken>updateOptions "$SWIFT_HOME" "SWIFT_HOME"
