rename jobs-sites.table to .html so that it can be more easily generated and viewed independently
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2858 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/libexec/log-processing/execute2.html.template
+++ b/libexec/log-processing/execute2.html.template
@@ -10,7 +10,7 @@ include(`toolbar.html.template')
 <p>Breakdown of execute2 final statuses by site:
 (<a href="execute2.html">More information about execute2 events</a>)</p>
 
-include(`jobs-sites.table')
+include(`jobs-sites.html')
 
 <p>Number of execute2 jobs at once - this is basically the number of
 execution attempts that have been submitted to some batch system such
