log-processing of compound procedure logs
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2891 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -154,6 +154,7 @@
 		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-execute2-transitions"/>
 		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-initshareddir-transitions"/>
 		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-karatasks-transitions"/>
+		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/log-to-compound-transitions"/>
 		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/logs-for-all"/>
 		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/lookup-colour"/>
 		<chmod perm="+x" file="${dist.dir}/libexec/log-processing/max-duration"/>
