--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,11 +2,11 @@
 
 all: phps pdfs
 
-phps: userguide.php tutorial.php tutorial-live.php quickstartguide.php reallyquickstartguide.php historical/languagespec.php historical/languagespec-0.6.php log-processing.php plot-tour.php
+phps: userguide.php tutorial.php tutorial-live.php quickstartguide.php reallyquickstartguide.php provenance.php historical/languagespec.php historical/languagespec-0.6.php log-processing.php plot-tour.php
 
-htmls: userguide.html tutorial.html tutorial-live.html quickstartguide.html reallyquickstartguide.html historical/languagespec.html historical/languagespec-0.6.html log-processing.html plot-tour.html
+htmls: userguide.html tutorial.html tutorial-live.html quickstartguide.html reallyquickstartguide.html provenance.html historical/languagespec.html historical/languagespec-0.6.html log-processing.html plot-tour.html
 
-pdfs: userguide.pdf tutorial.pdf tutorial-live.pdf quickstartguide.pdf reallyquickstartguide.pdf historical/languagespec.pdf historical/languagespec-0.6.pdf log-processing.pdf
+pdfs: userguide.pdf tutorial.pdf tutorial-live.pdf quickstartguide.pdf reallyquickstartguide.pdf provenance.pdf historical/languagespec.pdf historical/languagespec-0.6.pdf log-processing.pdf
 
 chunked-userguide: userguide.xml
 	./build-chunked-userguide.sh
