New configuration property provenance.log which controls whether verbose provenance-related log information is recorded in the run log file or not. By default, this is false, which means that less information is output by default now than previously.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2899 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -312,3 +312,10 @@ replication.limit=3
 #
 
 foreach.max.threads=1024
+
+# controls whether the log file will contain provenance information
+# enabling this will increase the size of log files, sometimes
+# significantly.
+
+provenance.log=false
+
