correct spelling of arbitrary in log plot axes, and change one axes to score
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2925 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/libexec/log-processing/colour.plot.template
+++ b/libexec/log-processing/colour.plot.template
@@ -4,7 +4,7 @@ set output 'sp-tmp.png'
 
 set key outside below
 
-set ylabel 'arbitary event number'
+set ylabel 'arbitrary event number'
 set xlabel 'realtime / s'
 
 set style arrow 1 nohead lt 1
