--- a/libexec/log-processing/sp.plot.template
+++ b/libexec/log-processing/sp.plot.template
@@ -4,7 +4,7 @@ set output 'sp-tmp.png'
 
 set key outside below
 
-set ylabel 'arbitary event number'
+set ylabel 'arbitrary event number'
 set xlabel 'realtime / s'
 
 set style arrow 1 nohead lt 1
