--- a/modules/provider-coaster/resources/log4j.properties
+++ b/modules/provider-coaster/resources/log4j.properties
@@ -21,5 +21,7 @@ log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSSZZZZZ} %-
 log4j.logger.org.globus.cog.abstraction=WARN
 log4j.logger.org.apache.axis.utils.JavaUtils=ERROR
 log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.JobSubmissionTaskHandler=INFO
+log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.SubmitJobCommand=INFO
 log4j.logger.org.globus.cog.karajan.workflow.service=INFO
 log4j.logger.org.globus.cog.abstraction.coaster=INFO
+log4j.logger.org.globus.cog.abstraction.impl.common.task.TaskImpl=DEBUG
