--- a/cog/modules/provider-local/project.properties
+++ b/cog/modules/provider-local/project.properties
@@ -2,6 +2,6 @@ module.name 		= provider-local
 long.name 		= Local provider for abstractions
 version			= 2.2
 project			= Java CoG Kit
-lib.deps		= -
+lib.deps		= backport-util-concurrent.jar
 debug			= true
 
