Log processing for internal procedure provenance logs
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2967 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/libexec/log-processing/makefile
+++ b/libexec/log-processing/makefile
@@ -100,6 +100,9 @@ dostageout.transitions: $(LOG)
 compound.transitions: $(LOG)
 	log-to-compound-transitions $(LOG) > compound.transitions
 
+internalproc.transitions: $(LOG)
+	log-to-internal-proc-transitions $(LOG) > internalproc.transitions
+
 ## retry analysis
 
 jobs.retrycount.summary: execute2.event
