tweaked logging a bit
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2466 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-coaster/resources/log4j.properties
+++ b/cog/modules/provider-coaster/resources/log4j.properties
@@ -20,8 +20,10 @@ log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSSZZZZZ} %-
 
 log4j.logger.org.globus.cog.abstraction=WARN
 log4j.logger.org.apache.axis.utils.JavaUtils=ERROR
-log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.JobSubmissionTaskHandler=INFO
-log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.SubmitJobCommand=INFO
-log4j.logger.org.globus.cog.karajan.workflow.service=INFO
+#log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.JobSubmissionTaskHandler=INFO
+#log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.SubmitJobCommand=INFO
+#log4j.logger.org.globus.cog.karajan.workflow.service=INFO
+#log4j.logger.org.globus.cog.karajan.workflow.service.commands.Command=WARN
+#log4j.logger.org.globus.cog.karajan.workflow.service.channels.AbstractKarajanChannel=WARN
 log4j.logger.org.globus.cog.abstraction.coaster=INFO
 log4j.logger.org.globus.cog.abstraction.impl.common.task.TaskImpl=DEBUG
