--- a/src/cog/modules/provider-coaster/resources/log4j.properties
+++ b/src/cog/modules/provider-coaster/resources/log4j.properties
@@ -20,8 +20,10 @@ log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSSZZZZZ} %-
 
 log4j.logger.org.globus.cog.abstraction=WARN
 log4j.logger.org.apache.axis.utils.JavaUtils=ERROR
-log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.JobSubmissionTaskHandler=INFO
-log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.SubmitJobCommand=INFO
-log4j.logger.org.globus.cog.karajan.workflow.service=INFO
+#log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.JobSubmissionTaskHandler=INFO
+#log4j.logger.org.globus.cog.abstraction.impl.execution.coaster.SubmitJobCommand=INFO
+#log4j.logger.org.globus.cog.karajan.workflow.service=INFO
+#log4j.logger.org.globus.cog.karajan.workflow.service.commands.Command=WARN
+#log4j.logger.org.globus.cog.karajan.workflow.service.channels.AbstractKarajanChannel=WARN
 log4j.logger.org.globus.cog.abstraction.coaster=INFO
 log4j.logger.org.globus.cog.abstraction.impl.common.task.TaskImpl=DEBUG
